--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,20 +10,11 @@ import FooterItem from "../components/FooterItem.astro";
     <!-- Sección inicial de imagenes y 3 botones -->
     <section class="mainSection">
       <div class="welcomeImgs">
-        <img
-          src="../../public/images/yellowMonkey.png"
-          alt="Mono amarillo del BCI"
-        />
+        <img src="/images/yellowMonkey.png" alt="Mono amarillo del BCI" />
 
-        <img
-          src="../../public/images/titleBank.png"
-          alt="El banco esta en tus manos"
-        />
+        <img src="/images/titleBank.png" alt="El banco esta en tus manos" />
 
-        <img
-          src="../../public/images/greenMonkey.png"
-          alt="Mono verde del BCI"
-        />
+        <img src="/images/greenMonkey.png" alt="Mono verde del BCI" />
       </div>
 
       <div class="linkButtons">
@@ -65,7 +56,7 @@ import FooterItem from "../components/FooterItem.astro";
         class="col-12 col-lg-6 d-flex justify-content-center align-items-center monkeyBlue"
       >
         <img
-          src="../../public/images/blueMonkey.png"
+          src="/images/blueMonkey.png"
           alt="Mono azul de BCI con la App"
           class="img-fluid monkeyBlue"
         />
