--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -39,7 +39,7 @@ const { title } = Astro.props;
   body {
     /* background-image: linear-gradient(to top,rgba(255,255,255,1),rgba(255,255,255,0)), url(../images/bg.png); */
     background: #ffffff;
-    background-image: url(../images/bg.png);
+    background-image: url(/images/bg.png);
     background-size: cover;
   }
 </style>
