--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -37,9 +37,8 @@ const { title } = Astro.props;
     font-family: system-ui, sans-serif;
   }
   body {
-    /* background-image: linear-gradient(to top,rgba(255,255,255,1),rgba(255,255,255,0)), url(../images/bg.png); */
     background: #ffffff;
-    background-image: url(/images/bg.png);
+    background-image: url(./images/bg.png);
     background-size: cover;
   }
 </style>
